--- a/style.scss
+++ b/style.scss
@@ -74,14 +74,16 @@ header {
         h3 {
             font-size: 1.5rem;
             margin: 30px 0px;
-            
         }
         button {
             padding: 10px 30px;
             background-color: transparent;
             border: 3px solid white;
-            color: white;
-            font-size: 1.5rem;
+            a {
+              color: white;
+              font-size: 1.5rem;
+              text-decoration: none;
+            }
             &:hover {
                 background-color: #82A289;
             }
