--- a/style.css
+++ b/style.css
@@ -255,6 +255,4 @@ footer div p {
   display: flex;
   align-items: center;
   font-family: "OpenSans-Reg", "Courier New", Courier, monospace;
-}
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
